@@ -98,217 +98,307 @@
     },
     {
       "dungeonID": 15,
+      "dungeonName": "Chasm Cave",
+      "dungeonPokemonList": [81,82,95,132,227,326,425,426],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 16,
+      "dungeonName": "Dark Hill",
+      "dungeonPokemonList": [92,93,94,200,344,354,356,472],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 17,
+      "dungeonName": "Sealed Ruins",
+      "dungeonPokemonList": [89,205,372,375,465,476,442],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 18,
+      "dungeonName": "Dusk Forest",
+      "dungeonPokemonList": [189,414,429,444],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 19,
+      "dungeonName": "Deep Dusk Forest",
+      "dungeonPokemonList": [37,112,208,306,450,470],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 20,
       "dungeonName": "Treeshroud Forest",
       "dungeonPokemonList": [64,280,421,229,38,65,281,416],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 16,
+      "dungeonID": 21,
       "dungeonName": "Brine Cave",
       "dungeonPokemonList": [86,138,99,279,423,72,87,120,148,365],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 17,
+      "dungeonID": 22,
+      "dungeonName": "Hidden Land",
+      "dungeonPokemonList": [149,310,357,409,411,432,445,460,467],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 23,
+      "dungeonName": "Temporal Tower",
+      "dungeonPokemonList": [137,337,338,436,233,373,376,437,474,483],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 24,
       "dungeonName": "Mystifying Forest",
       "dungeonPokemonList": [1,2,11,19,20,21,29,32,48,69,70,102,109,123,133,152,153,190,216,265,273,274,315,316,330,387,388,389,399,401,434,435,446,251,491],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 18,
+      "dungeonID": 25,
       "dungeonName": "Blizzard Island",
       "dungeonPokemonList": [55,183,184,215,221,225,238,288,298,299,333,351,361,393],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 19,
+      "dungeonID": 26,
       "dungeonName": "Crevice Cave",
       "dungeonPokemonList": [55,124,183,184,215,220,221,225,238,287,288,289,298,299,333,334,335,361,393,394,395,459,461,471,473,491],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 20,
+      "dungeonID": 27,
       "dungeonName": "Surrounded Sea",
       "dungeonPokemonList": [73,80,90,116,117,121,131,199,211,223,224,230,319,320,366,456,249],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 21,
+      "dungeonID": 28,
       "dungeonName": "Miracle Sea",
       "dungeonPokemonList": [73,80,91,116,117,121,170,171,199,211,223,224,226,230,319,320,346,366,367,368,369,370,456,457,458,491,489],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 22,
+      "dungeonID": 29,
       "dungeonName": "Aegis Cave",
       "dungeonPokemonList": [41,42,67,68,169,201,378,377,379,486],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 23,
+      "dungeonID": 30,
       "dungeonName": "Mt. Travail",
       "dungeonPokemonList": [22,56,57,95,105,107,115,122,161,162,165,166,212,214,217,236,292,307,308,400,491],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 24,
+      "dungeonID": 31,
+      "dungeonName": "The Nightmare",
+      "dungeonPokemonList": [35,36,39,40,52,53,80,98,108,140,141,147,173,174,182,196,202,209,222,231,235,241,242,278,279,293,316,317,325,326,327,360,418,424,454,463],
+      "recruitable": "Yes"
+    },
+    {
+      "dungeonID": 32,
       "dungeonName": "Spacial Rift",
       "dungeonPokemonList": [441,452,178,475,64,135,430,6,302,462,466,338,358,207,436,454,380,357,491,477,96,442,137,381,97,337,484],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 25,
+      "dungeonID": 335,
       "dungeonName": "Dark Crater",
       "dungeonPokemonList": [4,155,39,450,322,218,58,77,255,5,136,156,256,391,323,78,59,219,464,467,6,157,392,324,429,257],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 26,
+      "dungeonID": 34,
       "dungeonName": "Concealed Ruins",
       "dungeonPokemonList": [16,100,261,276,294,31,110,197,198,301,17,353,101,262,277,295,18],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 27,
+      "dungeonID": 35,
       "dungeonName": "Marine Resort",
       "dungeonPokemonList": [35,36,39,40,52,53,80,98,108,140,141,147,173,174,182,196,202,209,222,231,235,241,242,278,279,293,316,317,325,326,327,260,418,424,454,463],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 28,
+      "dungeonID": 36,
       "dungeonName": "Bottomless Sea",
       "dungeonPokemonList": [73,80,116,117,121,130,131,199,211,223,224,230,320,321,366,256,382],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 29,
+      "dungeonID": 37,
       "dungeonName": "Shimmer Desert",
       "dungeonPokemonList": [23,24,27,28,34,50,51,66,185,445,464,383],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 30,
+      "dungeonID": 38,
       "dungeonName": "Mt. Avalanche",
       "dungeonPokemonList": [55,124,183,184,215,220,221,225,238,287,288,289,298,299,333,334,335,361,393,394,395,461,473,144],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 31,
+      "dungeonID": 39,
       "dungeonName": "Giant Volcano",
       "dungeonPokemonList": [4,5,58,59,77,78,136,155,156,218,219,255,256,322,323,390,391,146,485],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 32,
+      "dungeonID": 40,
       "dungeonName": "World Abyss",
       "dungeonPokemonList": [276,198,16,100,261,17,31,101,110,197,294,301,277,295,262,19,487],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 33,
+      "dungeonID": 41,
       "dungeonName": "Sky Stairway",
       "dungeonPokemonList": [26,37,81,82,29,92,93,94,112,132,189,200,205,208,344,354,355,372,375,414,424,425442,444,465,468,470,472,476,477,150,384],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 34,
+      "dungeonID": 42,
       "dungeonName": "Mystery Jungle",
       "dungeonPokemonList": [1,2,3,11,19,20,21,29,32,45,48,69,70,71,102,109,123,133,143,152,153,154,190,191,192,216,252,253,254,265,266,268,273,274,315,316,330,387,388,389,399,407,428,234,235,446,151],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 35,
+      "dungeonID": 43,
       "dungeonName": "Serenity River",
       "dungeonPokemonList": [60,194,270,339,284],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 36,
+      "dungeonID": 44,
       "dungeonName": "Landslide Cave",
       "dungeonPokemonList": [49,181,210,213,269,413,443],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 37,
+      "dungeonID": 45,
       "dungeonName": "Lush Prairie",
       "dungeonPokemonList": [102,188,193,266,267,268,412.1],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 38,
+      "dungeonID": 46,
       "dungeonName": "Tiny Meadow",
       "dungeonPokemonList": [188,286,397],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 39,
+      "dungeonID": 47,
       "dungeonName": "Labyrinth Cave",
       "dungeonPokemonList": [30,33,42,66,444],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 40,
+      "dungeonID": 48,
       "dungeonName": "Oran Forest",
       "dungeonPokemonList": [10,43,187,265,296,106,412.3],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 41,
+      "dungeonID": 49,
       "dungeonName": "Lake Afar",
       "dungeonPokemonList": [7,8,9,61,62,79,118,119,129,134,158,159,160,186,195,258,259,260,271,272,341,342,349,350],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 42,
+      "dungeonID": 50,
       "dungeonName": "Happy Outlook",
       "dungeonPokemonList": [11,43,52,53,103,113,152,175,176,191,192,242,273,300,316,332,387,406,439,440,380],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 43,
+      "dungeonID": 51,
       "dungeonName": "Mt. Mistral",
       "dungeonPokemonList": [18,22,49,142,189,277,330,398,414,426,429,472,250],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 44,
+      "dungeonID": 52,
       "dungeonName": "Shimmer Hill",
       "dungeonPokemonList": [57,59,111,128,161,179,196,203,217,228,242,241,264,323,351,435,386],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 45,
+      "dungeonID": 53,
       "dungeonName": "Lost Wilderness",
       "dungeonPokemonList": [63,64,108,122,126,236,237,275,297,307,308,327,453,296,448],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 46,
+      "dungeonID": 54,
       "dungeonName": "Midnight Forest",
       "dungeonPokemonList": [15,20,48,49,69,123,165,166,265,267,274,290,315,479,381],
       "recruitable": "Yes"
     },
     {
-      "dungeonID": 47,
+      "dungeonID": 55,
       "dungeonName": "Zero Isle North",
       "dungeonPokemonList": [53, 65, 68, 141, 238, 469, 101, 80, 138, 22, 273, 219, 90, 42, 73, 106, 107, 112, 122, 124, 132, 164, 178, 214, 229, 295, 320, 323, 466, 467, 50, 12, 15, 37, 126, 168, 184, 292, 297, 311, 312, 160, 224, 8, 49, 87, 96, 98, 123, 127, 133, 222, 286, 307, 308, 314, 324, 348, 437, 468, 474, 205, 2, 56, 76, 93, 185, 426, 289, 26, 82, 202, 430, 116, 153, 211, 318, 337, 439, 344, 398, 32, 39, 110, 156, 5, 223, 303, 335, 359, 458, 230, 225, 34, 310, 3, 6, 9, 149, 154, 157, 365, 376, 422.2, 457, 227, 248, 254, 257, 260, 450, 452, 465, 473, 91, 317, 362, 373, 24, 45, 51, 62, 89, 121, 171, 217, 241, 429, 70, 416, 435, 455, 475, 284, 94],
       "recruitable": "No"
     },{
-      "dungeonID": 48,
+      "dungeonID": 56,
       "dungeonName": "Zero Isle East",
       "dungeonPokemonList": [87, 90, 222, 140, 184, 79, 193, 56, 73, 100, 21, 273, 214, 57, 42, 132, 163, 177, 228, 320, 122, 48, 106, 82, 15, 37, 160, 167, 218, 113, 98, 126, 204, 8, 138, 75, 93, 133, 176, 285, 436, 311, 312, 123, 127, 111, 292, 2, 96, 185, 337, 347, 425, 439, 466, 474, 25, 314, 198, 296, 153, 343, 32, 323, 359, 34, 307, 308, 156, 223, 5, 200, 335, 230, 110, 101, 116, 224, 225, 318, 12, 294, 310, 324, 360],
       "recruitable": "No"
     },
     {
-      "dungeonID": 49,
+      "dungeonID": 57,
       "dungeonName": "Zero Isle West",
       "dungeonPokemonList": [140, 90, 393, 222, 83, 100, 193, 351, 79, 72, 104, 21, 273, 290, 216, 240, 120, 233, 42, 49, 64, 139, 163, 178, 184, 220, 229, 259, 320, 394, 431, 434, 88, 106, 111, 323, 122, 451, 466, 12, 15, 32, 37, 47, 113, 141, 160, 167, 224, 242, 292, 311, 312, 326, 468, 425, 328, 8, 48, 87, 91, 97, 99, 112, 123, 127, 133, 142, 162, 215, 241, 246, 348, 436, 474, 23, 307, 308, 314, 73, 337, 204, 2, 58, 61, 93, 126, 132, 185, 238, 267, 286, 408, 25, 81, 68, 476, 80, 435, 76, 116, 164, 168, 181, 202, 212, 227, 318, 324, 354, 388, 430, 439, 462, 343, 51, 296, 143, 149, 409, 89, 101, 24, 39, 110, 117, 156, 214, 391, 464, 5, 200, 223, 335, 359, 342, 230, 166, 225, 295, 437, 34, 108, 310],
       "recruitable": "No"
     },
     {
-      "dungeonID": 50,
-      "dungeonName": "Zero Isle West",
+      "dungeonID": 58,
+      "dungeonName": "Zero Isle South",
       "dungeonPokemonList": [16, 39, 90, 117, 120, 121, 433, 173, 69, 265, 10, 102, 170, 431, 261, 316, 29, 19, 104, 246, 175, 263, 35, 239, 50, 304, 67, 70, 291, 187, 202, 21, 11, 13, 466, 72, 280, 133, 183, 269, 343, 307, 313, 97, 177, 171, 103, 74, 434, 123, 163, 436, 474, 209, 185, 227, 348, 287, 311, 312, 15, 23, 88, 264, 43, 161, 220, 317, 73, 192, 460, 351, 285, 374, 425, 165, 327, 83, 58, 60, 328, 100, 193, 154, 167, 439, 51, 216, 391, 388, 464, 309, 430, 181, 32, 207, 234, 125, 462, 84, 426, 62, 143, 310, 128, 44, 331, 198, 214, 286, 461, 332, 451, 210, 130, 435, 168, 188, 206, 290, 476, 89, 42, 371, 30, 33, 126, 114, 314, 59, 22, 205, 213, 101, 106, 107, 240, 322, 452, 262, 219, 132, 409, 78, 324, 111, 333, 402, 24, 361, 221, 162, 305, 375, 204, 410, 413, 142, 372, 247, 335, 432, 45, 362, 404, 411, 49, 284, 289, 414, 109, 76, 112, 31, 47, 355, 473, 394, 419, 34, 368, 233, 323, 467, 429, 445, 353, 77, 166, 337, 338, 448, 356, 110, 376, 450, 395, 334, 437, 357, 407, 342, 344, 212],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 59,
+      "dungeonName": "Star Cave",
+      "dungeonPokemonList": [60,347,433,401,270,438,316,54,337,437,385],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 60,
+      "dungeonName": "Oblivion Forest",
+      "dungeonPokemonList": [15,47,103,127,166,212,214,291,342,389,455,460,465],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 61,
+      "dungeonName": "Treacherous Waters",
+      "dungeonPokemonList": [55,73,80,99,120,148,222,224,260,271,279,320,362,365,395,423.1,423.2,445,245],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 62,
+      "dungeonName": "Southeastern Islands",
+      "dungeonPokemonList": [56,81,97,102,178,181,197,198,203,237,239,282,297,305,309,311,312,326,359,475,243],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 63,
+      "dungeonName": "Inferno Cave",
+      "dungeonPokemonList": [37,79,92,93,94,126,157,164,200,306,316,317,322,323,324,353,354,408,409,425,426,467,244],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 64,
+      "dungeonName": "Zero Isle Center",
+      "dungeonPokemonList": [55, 320, 369, 458, 76, 76, 305, 443, 95, 106, 57, 227, 260, 395, 448, 248, 302, 175, 124, 221, 362, 365, 461, 471, 473, 112, 48, 49, 267, 269, 284, 313, 414, 107, 444, 306, 476, 153, 154, 191, 192, 274, 275, 357, 470, 6, 58, 126, 218, 219, 228, 229, 467, 208, 149, 334, 82, 125, 198, 239, 405, 462, 466, 479, 35, 445, 23, 24, 88, 89, 109, 110, 453, 454, 64, 65, 122, 343, 344, 436, 437, 439],
+      "recruitable": "No"
+    },
+    {
+      "dungeonID": 65,
+      "dungeonName": "Destiny Tower",
+      "dungeonPokemonList": [[173, 1, 16, 69, 90, 152, 155, 252, 255, 339, 10, 258, 325, 102, 170, 295, 340, 434, 117, 158, 316, 433, 234, 399, 412.1, 29, 19, 264, 270, 246, 121, 175, 35, 104, 50, 304, 66, 70, 291, 187, 202, 21, 44, 466, 280, 299, 73, 133, 134, 184, 269, 343, 307, 313, 348, 97, 177, 199, 103, 434, 436, 474, 123, 163, 287, 311, 312, 427, 195, 185, 17, 24, 19, 43, 192, 460, 351, 425, 281, 285, 374, 48, 165, 83, 58, 60, 328, 368, 100, 193, 439, 157, 46, 26, 27, 220, 196, 298, 205, 211, 205, 213, 101, 106, 107, 239, 322, 428, 452, 262, 219, 132, 409, 78, 324, 111, 334, 402, 362, 221, 45, 162, 305, 374, 204, 410, 413.1, 363, 142, 373, 339, 335, 432, 364, 227, 365, 404, 411, 48, 203, 284, 288, 414, 240, 109, 76, 112, 31, 47, 355, 473, 217, 75, 393, 419, 34, 233, 296, 323, 448, 467, 429, 445, 353, 212, 338]],
       "recruitable": "No"
     }
   ]
